--- a/app/src/main/res/layout/activity_input_transaction.xml
+++ b/app/src/main/res/layout/activity_input_transaction.xml
@@ -47,7 +47,7 @@
         android:id="@+id/dateView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Today"
+        android:text="Today"
         android:textSize="12sp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -107,6 +107,7 @@
         android:layout_height="wrap_content"
         android:textSize="12sp"
         android:textColor="@color/black"
+        android:inputType="number"
         android:hint="Amount of transaction"
         app:layout_constraintTop_toBottomOf="@id/labelAmount"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,7 +125,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"/>
     <EditText
-        android:id="@+id/TypeView"
+        android:id="@+id/typeView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Select transaction type"
@@ -149,6 +150,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/labelType"/>
     <Button
+        android:id="@+id/btnSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Save"
