--- a/app/src/main/res/layout/adapter_transaction.xml
+++ b/app/src/main/res/layout/adapter_transaction.xml
@@ -21,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:text="28"
+            android:gravity="center_horizontal"
             android:textColor="@color/blue"
             android:textSize="40sp"
             app:layout_constraintTop_toTopOf="@id/layoutDate"
