--- a/app/src/main/res/layout/adapter_type.xml
+++ b/app/src/main/res/layout/adapter_type.xml
@@ -1,31 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
-    android:padding="8dp"
+    android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:elevation="1dp"
     android:background="@drawable/background_white_radius_5"
-    android:layout_height="wrap_content">
+    android:elevation="1dp"
+    android:padding="8dp">
+
     <TextView
         android:id="@+id/typeNameView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Pembelian"
         android:layout_marginStart="5dp"
+        android:text="Pembelian"
         android:textColor="@color/black"
+        app:layout_constraintEnd_toStartOf="@id/typeView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/typeView"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/typeView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Debet"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:text="Debet"
         android:textColor="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
